--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/teacherspet?user=postgres&password=106992
-spring.datasource.url=jdbc:postgresql://localhost:5432/teacherspet?user=postgres&password=15.jes.64
+spring.datasource.url=jdbc:postgresql://localhost:5432/teacherspet?user=postgres&password=106992
+#spring.datasource.url=jdbc:postgresql://localhost:5432/teacherspet?user=postgres&password=15.jes.64
 #spring.datasource.url=${JDBC_DATABASE_URL}
 spring.jpa.generate-ddl=true
